sửa trangchu login

--- a/index.html
+++ b/index.html
@@ -816,7 +816,7 @@ Start doing.'>
                         <div class="login__control">
                             <button type='submit' class="btn btn-md btn--warning btn--wider">sign in</button>
                             <a href="#" class="login__tracker form__tracker">Forgot password?</a>
-                            <a href="login.html" class="login__tracker form__tracker">Tạo tài khoản!</a>
+                            <a href="" class="login__tracker form__tracker">Tạo tài khoản!</a>
                         </div>
                     </form>
                 </div>
