sua layout admin1

--- a/index.html
+++ b/index.html
@@ -798,9 +798,9 @@ Start doing.'>
                         <p class="login__title">sign in <br><span class="login-edition">welcome to A.Movie</span></p>
 
                         <div class="social social--colored">
-                                <a href='#' class="social__variant fa fa-facebook"></a>
-                                <a href='#' class="social__variant fa fa-twitter"></a>
-                                <a href='#' class="social__variant fa fa-tumblr"></a>
+                            <i class="fa-brands fa-facebook"></i>
+                            <i class="fa-brands fa-instagram"></i>
+                            <i class="fa-brands fa-twitter"></i>
                         </div>
 
                         <p class="login__tracker">or</p>
